Refactor home page and enhance i18n support for buttons
Removed unused `Router` dependency from `home.ts` and replaced hardcoded button labels in `home.html` with translatable strings. Updated German and English translation files to include new keys for button labels.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -35,6 +35,10 @@
     "ADD_GUEST": "Person hinzufügen",
     "REMOVE_GUEST": "Person entfernen",
     "NO_GUESTS": "Noch keine Personen eingeladen",
-    "YOU_HAVE_TIME_UNTIL": "Du hast bis zum {{dueDate}}, um deine Einträge zu bearbeiten und anzupassen."
+    "YOU_HAVE_TIME_UNTIL": "Du hast bis zum {{dueDate}}, um deine Einträge zu bearbeiten und anzupassen.",
+    "DELETE": "Löschen",
+    "SHARE": "Teilen",
+    "PREVIEW": "Vorschau",
+    "SAVE": "Speichern"
   }
 }
