Refactor form behavior and enhance validation.
Introduced a max length validation (500 chars) for guest contributions and added tooltips and error messages for better UX. Adjusted sharing and preview logic to require valid form data and refined button states and styles to align with user roles and form state. Added new i18n keys and an updated layout to improve accessibility and clarity.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -39,6 +39,8 @@
     "DELETE": "Löschen",
     "SHARE": "Teilen",
     "PREVIEW": "Vorschau",
-    "SAVE": "Speichern"
+    "SAVE": "Speichern",
+    "SHARE_TOOLTIP": "Bitte speichern Sie zuerst das Formular und klicken Sie dann auf Teilen",
+    "CONTRIBUTION_MAX_LENGTH_ERROR": "Der Beitrag ist zu lang. Maximal 500 Zeichen erlaubt."
   }
 }
